# ocaml-flap

./: .gitignore  LICENSE  Makefile  README.md  dune-project  flap.opam
.github/workflows/: test.yml
benchmarks/: README.md  munge.py
benchmarks/common/: dune  leex.ml  leex.mli  test_int_exp.ml
benchmarks/csv/: README.md  csv_benchmark.ml  csv_hand_normalized_lexer.ml  csv_hand_normalized_parser.ml  csv_lexer.mll  csv_lexer_menhir_code.mll  csv_lexer_menhir_table.mll  csv_normalized_lexer.mll  csv_normalized_lexer_menhir_code.mll  csv_normalized_lexer_menhir_table.mll  csv_normalized_parser.mly  csv_normalized_parser_menhir_table.mly  csv_parser.mly  csv_parser_menhir_table.mly  csv_staged_combinator_parser.ml  csv_tokens.ml  csv_tokens.mli  csv_tokens_base.ml  dune
benchmarks/csv/data/: 128k.csv  16k.csv  256k.csv  32k.csv  512k.csv  64k.csv  gen.py
benchmarks/intexp/: dune  intexp_benchmark.ml  intexp_hand_normalized_lexer.ml  intexp_hand_normalized_parser.ml  intexp_lexer_menhir_code.mll  intexp_lexer_menhir_table.mll  intexp_normalized_lexer.mll  intexp_normalized_lexer_menhir_code.mll  intexp_normalized_lexer_menhir_table.mll  intexp_normalized_parser.mly  intexp_normalized_parser_menhir_code.mly  intexp_parser.mly  intexp_parser_menhir_table.mly  intexp_staged_combinator_parser.ml  intexp_tokens.ml  intexp_tokens.mli  intexp_tokens_base.ml  intexp_unstaged_combinator_parser.ml
benchmarks/json/: dune  json_benchmark.ml  json_hand_normalized_lexer.ml  json_hand_normalized_parser.ml  json_lexer_menhir_code.mll  json_lexer_menhir_table.mll  json_normalized_lexer.mll  json_normalized_lexer_menhir_code.mll  json_normalized_lexer_menhir_table.mll  json_normalized_parser.mly  json_normalized_parser_menhir_code.mly  json_parser.mly  json_parser_menhir_code.mly  json_parts.ml  json_staged_combinator_parser.ml  json_tokens.ml  json_tokens.mli  json_tokens_base.ml  json_unstaged_combinator_parser.ml
benchmarks/pgn/: dune  pgn_benchmark.ml  pgn_hand_normalized_lexer.ml  pgn_hand_normalized_parser.ml  pgn_lexer_menhir_code.mll  pgn_lexer_menhir_table.mll  pgn_normalized_lexer.mll  pgn_normalized_lexer_menhir_code.mll  pgn_normalized_lexer_menhir_table.mll  pgn_normalized_parser.mly  pgn_normalized_parser_menhir_code.mly  pgn_parser.mly  pgn_parser_menhir_table.mly  pgn_staged_combinator_parser.ml  pgn_tokens.ml  pgn_tokens.mli  pgn_tokens_base.ml  pgn_unstaged_combinator_parser.ml
benchmarks/ppm/: dune  ppm_benchmark.ml  ppm_hand_normalized_lexer.ml  ppm_hand_normalized_parser.ml  ppm_lexer_menhir_code.mll  ppm_lexer_menhir_table.mll  ppm_normalized_lexer.mll  ppm_normalized_lexer_menhir_code.mll  ppm_normalized_lexer_menhir_table.mll  ppm_normalized_parser.mly  ppm_normalized_parser_menhir_code.mly  ppm_parser.mly  ppm_parser_menhir_code.mly  ppm_staged_combinator_parser.ml  ppm_tokens.ml  ppm_tokens.mli  ppm_tokens_base.ml  ppm_unstaged_combinator_parser.ml
benchmarks/sexp/: dune  sexp_benchmark.ml  sexp_hand_normalized_lexer.ml  sexp_hand_normalized_parser.ml  sexp_lexer_menhir_code.mll  sexp_lexer_menhir_table.mll  sexp_normalized_lexer.mll  sexp_normalized_lexer_menhir_code.mll  sexp_normalized_lexer_menhir_table.mll  sexp_normalized_parser.mly  sexp_normalized_parser_menhir_table.mly  sexp_parser.mly  sexp_parser_menhir_table.mly  sexp_parts.ml  sexp_staged_combinator_parser.ml  sexp_tokens.ml  sexp_tokens.mli  sexp_tokens_base.ml  sexp_unstaged_combinator_parser.ml
grammars/: csv_grammar.ml  dune  grammars_common.ml  intexp_grammar.ml  json_grammar.ml  pgn_grammar.ml  ppm_grammar.ml  sexp_grammar.ml
lib/: code.ml  code.mli  compiler.ml  compiler.mli  dune  env.ml  env.mli  flap.ml  flap.mli  fused.ml  fused.mli  normal.ml  normal.mli  normalize.ml  normalize.mli  recognizer.ml  recognizer.mli
tests/: dune  test.ml
